plugins {
    id 'fabric-loom' version '0.11-SNAPSHOT'
    id 'maven-publish'
    id 'java-library'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
}

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

archivesBaseName = project.archives_base_name
version = project.mod_version
group = project.maven_group

repositories {
    mavenCentral()
    // Add repositories to retrieve artifacts from in here.
    // You should only use this when depending on other mods because
    // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
    // See https://docs.gradle.org/current/userguide/declaring_repositories.html
    // for more information about repositories.
}

dependencies {
    // To change the versions see the gradle.properties file
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings loom.officialMojangMappings()
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    include "org.jocl:jocl:2.0.5"
    implementation("org.jocl:jocl:2.0.5")
    shadow "org.jocl:jocl:2.0.5"
}

processResources {
    inputs.property "version", project.version

    afterEvaluate {
        from(sourceSets.main.resources.srcDirs) {
            include "fabric.mod.json"
            duplicatesStrategy DuplicatesStrategy.INCLUDE
        }
    }
}

loom {
    accessWidenerPath = file("src/main/resources/evolution.accesswidener")
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
    options.release = 17
}

java {
    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
    // if it is present.
    // If you remove this line, sources will not be generated.
//    withSourcesJar()
}

jar {
    from "LICENSE"
}

shadowJar {
    configurations = [project.configurations.shadow]
    relocate "org.jocl", "tgw.evolution.shadow.org.jocl"
}

remapJar {
    dependsOn(shadowJar)
}

// configure the maven publication
publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }

    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
    repositories {
        // Add repositories to publish to here.
        // Notice: This block does NOT have the same function as the block in the top level.
        // The repositories here will be used for publishing your artifact, not for
        // retrieving dependencies.
    }
}
